--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -29,7 +29,7 @@
 // @import "../../../node_modules/bootstrap/scss/jumbotron";
 // @import "../../../node_modules/bootstrap/scss/alert";
 // @import "../../../node_modules/bootstrap/scss/progress";
-// @import "../../../node_modules/bootstrap/scss/media";
+@import "../../../node_modules/bootstrap/scss/media";
 // @import "../../../node_modules/bootstrap/scss/list-group";
 @import "../../../node_modules/bootstrap/scss/close";
 // @import "../../../node_modules/bootstrap/scss/toasts";
