--- a/src/components/technologies/technologies-new.css
+++ b/src/components/technologies/technologies-new.css
@@ -30,7 +30,10 @@
       padding: 0; } }
 
 .tiles-wrapper {
-  padding: 3.5rem 2rem 0; }
+  padding: 2rem 0; }
+  @media (min-width: 992px) {
+    .tiles-wrapper {
+      padding: 5.75rem 2rem 3.75rem; } }
   .tiles-wrapper .tiles-row {
     flex-direction: column; }
     @media (min-width: 992px) {
