--- a/src/shared-components/sliderModal/sliderModal.css
+++ b/src/shared-components/sliderModal/sliderModal.css
@@ -15,7 +15,7 @@
   background: #efefef linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.11) 100%) 0% 0% no-repeat padding-box;
   border-radius: 1rem;
   border: none; }
-  .slider-modal .modal-content img {
+  .slider-modal .modal-content .modal-img {
     width: auto;
     height: 13.75rem;
     margin: 0 auto; }
@@ -30,6 +30,8 @@
     font-size: 0.875rem;
     line-height: 1.375rem;
     color: #1c1c1c; }
+  .slider-modal .modal-content .industry-media-card p {
+    -webkit-line-clamp: unset; }
 
 .slider-modal .slick-slider {
   width: 100%; }
