--- a/src/shared-components/tile/tile.css
+++ b/src/shared-components/tile/tile.css
@@ -8,7 +8,7 @@
   flex-direction: column;
   background: transparent linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.11) 100%) 0% 0% no-repeat padding-box;
   border-radius: 1.5rem; }
-  .tile-card-body > img {
+  .tile-card-body .tile-img {
     width: auto;
     height: 13.75rem;
     margin: 0 auto; }
@@ -24,11 +24,13 @@
         line-height: 2rem; } }
   .tile-card-body .card-text {
     font-size: 1rem;
-    line-height: 1.375rem;
-    -webkit-line-clamp: 4; }
+    line-height: 1.375rem; }
     @media (min-width: 992px) {
       .tile-card-body .card-text {
-        font-size: 0.875rem; } }
+        font-size: 0.875rem;
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical; } }
 
 .tile-card {
   border-radius: 1.5rem;
@@ -36,7 +38,8 @@
   margin-top: 1rem; }
   @media (min-width: 992px) {
     .tile-card {
-      margin-top: 0; } }
+      margin-top: 0;
+      height: 100%; } }
   .tile-card.vertical {
     height: 100%; }
     @media (min-width: 992px) {
@@ -47,7 +50,7 @@
       flex-direction: row;
       padding-left: 0; } }
   @media (min-width: 992px) {
-    .tile-card.horizontal .tile-card-body img {
+    .tile-card.horizontal .tile-card-body .tile-img {
       width: 19.5rem;
       margin-right: 16px; } }
   .tile-card .tile-hover-wrap {
