responsive style added in technology page

--- a/src/shared-components/tile/tile.css
+++ b/src/shared-components/tile/tile.css
@@ -71,18 +71,19 @@
       top: 50%;
       transform: translateY(-50%);
       z-index: -1; }
-  .tile-card:hover .tile-hover-wrap {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 1rem;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    right: 0;
-    backdrop-filter: blur(15px);
-    -webkit-backdrop-filter: blur(15px);
-    border-radius: 1.5rem; }
+  @media (min-width: 992px) {
+    .tile-card:hover .tile-hover-wrap {
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      padding: 0 1rem;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      right: 0;
+      backdrop-filter: blur(15px);
+      -webkit-backdrop-filter: blur(15px);
+      border-radius: 1.5rem; } }
