components added for technology and industry page

--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -21,6 +21,7 @@ $assets_url: "../";
 //$gray-900: #212529 !default;
 //$black:    #000 !default;
 $gray-10: #1a1a1a; // black 90%
+$gray-11: #1c1c1c;
 $gray-20: #333333; // black 80%
 $gray-40: #666666;
 $gray-44: #707070;
