--- a/src/shared-components/tile/tile.css
+++ b/src/shared-components/tile/tile.css
@@ -7,7 +7,7 @@
 .tile-card-body {
   flex-direction: column;
   background: transparent linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.11) 100%) 0% 0% no-repeat padding-box;
-  border-radius: 1.5rem; }
+  border-radius: 0.75rem; }
   .tile-card-body .tile-img {
     width: auto;
     height: 13.75rem;
@@ -24,16 +24,17 @@
         line-height: 2rem; } }
   .tile-card-body .card-text {
     font-size: 1rem;
-    line-height: 1.375rem; }
+    line-height: 1.375rem;
+    margin-bottom: 0; }
     @media (min-width: 992px) {
       .tile-card-body .card-text {
         font-size: 0.875rem;
         display: -webkit-box;
-        -webkit-line-clamp: 4;
+        -webkit-line-clamp: 5;
         -webkit-box-orient: vertical; } }
 
 .tile-card {
-  border-radius: 1.5rem;
+  border-radius: 0.75rem;
   background-color: #d6f5f0;
   margin-top: 1rem; }
   @media (min-width: 992px) {
@@ -86,4 +87,4 @@
       right: 0;
       backdrop-filter: blur(15px);
       -webkit-backdrop-filter: blur(15px);
-      border-radius: 1.5rem; } }
+      border-radius: 0.75rem; } }
