--- a/src/shared-components/tile/tile.scss
+++ b/src/shared-components/tile/tile.scss
@@ -6,7 +6,7 @@
   background: transparent
     linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.11) 100%)
     0% 0% no-repeat padding-box;
-  border-radius: 1.5rem;
+  border-radius: 0.75rem;
 
   .tile-img {
     width: auto;
@@ -31,18 +31,19 @@
   .card-text {
     font-size: 1rem;
     line-height: 1.375rem;
+    margin-bottom: 0;
 
     @include media-breakpoint-up(lg) {
       font-size: 0.875rem;
       display: -webkit-box;
-      -webkit-line-clamp: 4;
+      -webkit-line-clamp: 5;
       -webkit-box-orient: vertical;
     }
   }
 }
 
 .tile-card {
-  border-radius: 1.5rem;
+  border-radius: 0.75rem;
   background-color: $mint;
   margin-top: 1rem;
   @include media-breakpoint-up(lg) {
@@ -114,7 +115,7 @@
         right: 0;
         backdrop-filter: blur(15px);
         -webkit-backdrop-filter: blur(15px);
-        border-radius: 1.5rem;
+        border-radius: 0.75rem;
       }
     }
   }
