css files changes in christmas theme

--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -61,6 +61,6 @@
 @import "pages/contact-us";
 @import "pages/testimonial";
 @import "pages/new-pages";
-
+@import "pages/christmas-theme";
 /* offcanvas */
 @import "offcanvas";
