--- a/src/assets/stylesheets/_new-year-changes-2022.scss
+++ b/src/assets/stylesheets/_new-year-changes-2022.scss
@@ -1,49 +1,3 @@
-html {
-  @include rem-baseline;
-}
-
-// Main Content
-.josh-content {
-  padding: 3.5rem 0 0;
-  background-color: $gray-96;
-
-  @include media-breakpoint-up(lg) {
-    padding: 4.75rem 0 0;
-  }
-}
-
-// Video/Media Grid
-.video-grid,
-.media-grid {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 2rem;
-  padding: 3rem 0;
-
-  @include media-breakpoint-up(md) {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  @include media-breakpoint-up(lg) {
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2.5rem;
-  }
-
-  @include media-breakpoint-up(xl) {
-    gap: 2.25rem 3.5rem;
-    padding: 5rem 0;
-  }
-}
-
-// Spinner Wrapper
-.spinner-wrapper {
-  display: grid;
-  grid-template-columns: 1fr;
-  align-items: center;
-  justify-items: center;
-  padding: 3rem 0;
-}
-
 /* customizable snowflake styling */
 .snowflake {
   color: #fff;
@@ -167,4 +121,12 @@ html {
   left: 65%;
   -webkit-animation-delay: 4s, 2.5s;
   animation-delay: 4s, 2.5s;
+}
+.img-new-year {
+  position: fixed;
+  width: 100%;
+  height: auto;
+  bottom: 0;
+  left: 0;
+  z-index: 1052;
 }
