--- a/src/components/technologies/technologies-new.scss
+++ b/src/components/technologies/technologies-new.scss
@@ -13,6 +13,12 @@
     height: 43.75rem;
     padding: 3.75rem 0 3.75rem 4.5rem;
   }
+
+  .industry-slider {
+    .domain-item-wrap {
+      margin-top: 1.5rem;
+    }
+  }
 }
 
 .industry-type-heading {
@@ -25,7 +31,6 @@
   @include media-breakpoint-up(lg) {
     font-size: 3.125rem;
     line-height: 3.75rem;
-    margin-bottom: 3.75rem;
     padding: 0;
   }
 }
