story tile card css updated

--- a/src/shared-components/storyTile/storyTile.scss
+++ b/src/shared-components/storyTile/storyTile.scss
@@ -69,15 +69,45 @@
 .story-tile {
   flex: 1;
 
-  &:hover {
-    .story-tile-hover-wrap {
-      display: block;
+  img {
+    width: 2rem;
+  }
+  .story-tile-hover-wrap {
+    display: none;
+
+    p {
+      font-size: 0.75rem;
     }
   }
-}
+  &:hover {
+    .story-tile-hover-wrap {
+      @include media-breakpoint-up(lg) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        right: 0;
+        backdrop-filter: blur(15px);
+        -webkit-backdrop-filter: blur(15px);
+      }
+    }
+  }
 
-.story-tile-hover-wrap {
-  position: absolute;
-  width: 100%;
-  display: none;
+  .link-btn {
+    &::after {
+      content: "";
+      position: absolute;
+      background-color: #e86055;
+      height: 0.125rem;
+      width: 50%;
+      right: -1rem;
+      top: 50%;
+      transform: translateY(-50%);
+      z-index: -1;
+    }
+  }
 }
