--- a/src/shared-components/storyTile/storyTile.css
+++ b/src/shared-components/storyTile/storyTile.css
@@ -54,9 +54,11 @@
         font-size: 1.75rem; } }
 
 .story-tile {
-  flex: 1; }
+  flex: 1;
+  width: 100%; }
   .story-tile img {
-    width: 2rem; }
+    width: 2rem;
+    height: 2rem; }
   .story-tile .story-tile-hover-wrap {
     display: none; }
     .story-tile .story-tile-hover-wrap p {
@@ -65,7 +67,6 @@
     .story-tile:hover .story-tile-hover-wrap {
       display: flex;
       justify-content: center;
-      align-items: center;
       position: absolute;
       width: 100%;
       height: 100%;
@@ -79,8 +80,8 @@
     position: absolute;
     background-color: #e86055;
     height: 0.125rem;
-    width: 50%;
-    right: -1rem;
+    width: 100%;
+    right: 0;
     top: 50%;
     transform: translateY(-50%);
     z-index: -1; }
