--- a/src/shared-components/storyTile/storyTile.scss
+++ b/src/shared-components/storyTile/storyTile.scss
@@ -68,9 +68,11 @@
 
 .story-tile {
   flex: 1;
+  width: 100%;
 
   img {
     width: 2rem;
+    height: 2rem;
   }
   .story-tile-hover-wrap {
     display: none;
@@ -84,7 +86,6 @@
       @include media-breakpoint-up(lg) {
         display: flex;
         justify-content: center;
-        align-items: center;
         position: absolute;
         width: 100%;
         height: 100%;
@@ -103,8 +104,8 @@
       position: absolute;
       background-color: #e86055;
       height: 0.125rem;
-      width: 50%;
-      right: -1rem;
+      width: 100%;
+      right: 0;
       top: 50%;
       transform: translateY(-50%);
       z-index: -1;
