--- a/src/shared-components/storyTile/storyTile.css
+++ b/src/shared-components/storyTile/storyTile.css
@@ -17,45 +17,47 @@
   flex-direction: column; }
   @media (min-width: 992px) {
     .story-tile-list {
+      background: url("../../assets/images/revampImages/success-bg@2x.png") no-repeat;
+      background-size: cover;
+      background-position: center;
       flex-direction: row;
       height: 541px; } }
 
-.story-tile-item {
-  padding: 1rem; }
+@media (min-width: 992px) {
+  .story-tile-item {
+    flex-direction: column; } }
+
+.story-tile-item:first-child, .story-tile-item:last-child {
+  height: 144px;
+  max-height: 144px; }
   @media (min-width: 992px) {
-    .story-tile-item {
-      padding: 1.5rem;
-      flex-direction: column; } }
-  .story-tile-item:first-child, .story-tile-item:last-child {
-    height: 144px;
-    max-height: 144px; }
-    @media (min-width: 992px) {
-      .story-tile-item:first-child, .story-tile-item:last-child {
-        flex: 0 0 302px;
-        height: unset;
-        max-height: unset; } }
-  .story-tile-item:nth-child(2) {
-    height: 236px;
-    max-height: 236px; }
-    @media (min-width: 992px) {
-      .story-tile-item:nth-child(2) {
-        flex: 1;
-        height: unset;
-        max-height: unset; } }
-    @media (min-width: 992px) {
-      .story-tile-item:nth-child(2) .story-tile {
-        height: unset;
-        max-height: unset; } }
-  .story-tile-item span {
-    font-size: 1.125rem;
-    line-height: 1.5; }
-    @media (min-width: 992px) {
-      .story-tile-item span {
-        font-size: 1.75rem; } }
+    .story-tile-item:first-child, .story-tile-item:last-child {
+      flex: 0 0 302px;
+      height: unset;
+      max-height: unset; } }
+
+.story-tile-item:nth-child(2) {
+  height: 236px;
+  max-height: 236px; }
+  @media (min-width: 992px) {
+    .story-tile-item:nth-child(2) {
+      flex: 1;
+      height: unset;
+      max-height: unset; } }
+
+.story-tile-item span {
+  font-size: 1.125rem;
+  line-height: 1.5; }
+  @media (min-width: 992px) {
+    .story-tile-item span {
+      font-size: 1.75rem; } }
 
 .story-tile {
   flex: 1;
   width: 100%; }
+  @media (min-width: 992px) {
+    .story-tile {
+      padding: 1.5rem; } }
   .story-tile img {
     width: 2rem;
     height: 2rem; }
@@ -74,7 +76,8 @@
       top: 0;
       right: 0;
       backdrop-filter: blur(15px);
-      -webkit-backdrop-filter: blur(15px); } }
+      -webkit-backdrop-filter: blur(15px);
+      padding: 1.5rem 0 1.5rem 1.5rem; } }
   .story-tile .link-btn::after {
     content: "";
     position: absolute;
