--- a/src/components/successStories/success-story.scss
+++ b/src/components/successStories/success-story.scss
@@ -54,14 +54,22 @@
 
 .story-features {
   img {
-    height: 11.5rem;
-    width: 100%;
+    height: auto;
+    width: 12.625rem;
     box-shadow: -3px 0px 6px rgba(230, 230, 230, 0.745);
     border-radius: 0.5rem;
+    object-fit: cover;
   }
 
   p {
     font-size: 0.875rem;
     color: $black;
+  }
+}
+
+.features-details {
+  flex-direction: column;
+  @include media-breakpoint-up(lg) {
+    flex-direction: row;
   }
 }
