--- a/src/shared-components/storyTile/storyTile.css
+++ b/src/shared-components/storyTile/storyTile.css
@@ -39,8 +39,9 @@
       max-height: unset; } }
 
 .story-tile-item:nth-child(2) {
-  height: 236px;
-  max-height: 236px; }
+  height: 18rem;
+  max-height: 18rem;
+  flex-direction: column; }
   @media (min-width: 992px) {
     .story-tile-item:nth-child(2) {
       flex: 1;
@@ -67,19 +68,16 @@
     display: none; }
     .story-tile .story-tile-hover-wrap p {
       font-size: 0.75rem; }
-  @media (min-width: 992px) {
-    .story-tile:hover .story-tile-hover-wrap {
-      display: flex;
-      justify-content: center;
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      left: 0;
-      top: 0;
-      right: 0;
-      backdrop-filter: blur(15px);
-      -webkit-backdrop-filter: blur(15px);
-      padding: 1.5rem 0 1.5rem 1.5rem; } }
+  .story-tile:hover .story-tile-hover-wrap {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    right: 0;
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+    padding: 1.5rem; }
   .story-tile .link-btn::after {
     content: "";
     position: absolute;
