--- a/src/shared-components/storyTile/storyTile.scss
+++ b/src/shared-components/storyTile/storyTile.scss
@@ -25,9 +25,7 @@
 }
 
 .story-tile-item {
-  // padding: 1rem;
   @include media-breakpoint-up(lg) {
-    // padding: 1.5rem;
     flex-direction: column;
   }
   &:first-child,
@@ -42,8 +40,9 @@
   }
 
   &:nth-child(2) {
-    height: 236px;
-    max-height: 236px;
+    height: 18rem;
+    max-height: 18rem;
+    flex-direction: column;
 
     @include media-breakpoint-up(lg) {
       flex: 1;
@@ -80,19 +79,15 @@
   }
   &:hover {
     .story-tile-hover-wrap {
-      @include media-breakpoint-up(lg) {
-        display: flex;
-        justify-content: center;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        left: 0;
-        top: 0;
-        right: 0;
-        backdrop-filter: blur(15px);
-        -webkit-backdrop-filter: blur(15px);
-        padding: 1.5rem 0 1.5rem 1.5rem;
-      }
+      display: flex;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      right: 0;
+      backdrop-filter: blur(15px);
+      -webkit-backdrop-filter: blur(15px);
+      padding: 1.5rem;
     }
   }
 
