--- a/src/shared-components/storyTile/storyTile.css
+++ b/src/shared-components/storyTile/storyTile.css
@@ -25,6 +25,20 @@
       flex-direction: row;
       height: 541px; } }
 
+.story-tile-item:not(:first-child) {
+  border-top: 0.5rem solid #fff; }
+  @media (min-width: 992px) {
+    .story-tile-item:not(:first-child) {
+      border-top: unset; } }
+
+@media (min-width: 992px) {
+  .story-tile-item:first-child {
+    border-right: 0.5rem solid #fff; } }
+
+@media (min-width: 992px) {
+  .story-tile-item:last-child {
+    border-left: 0.5rem solid #fff; } }
+
 @media (min-width: 992px) {
   .story-tile-item {
     flex-direction: column; } }
@@ -46,7 +60,14 @@
     .story-tile-item:nth-child(2) {
       flex: 1;
       height: unset;
-      max-height: unset; } }
+      max-height: unset;
+      border-left: 0.5rem solid #fff;
+      border-right: 0.5rem solid #fff; } }
+  .story-tile-item:nth-child(2) .story-tile:first-child {
+    border-bottom: 0.5rem solid #fff; }
+    @media (min-width: 992px) {
+      .story-tile-item:nth-child(2) .story-tile:first-child {
+        border-bottom: 1rem solid #fff; } }
 
 .story-tile-item span {
   font-size: 1.125rem;
