pagination added in story page

--- a/src/components/successStories/success-story.css
+++ b/src/components/successStories/success-story.css
@@ -62,3 +62,16 @@
   @media (min-width: 992px) {
     .features-details {
       flex-direction: row; } }
+
+.pagination-wrap {
+  padding: 2.5rem 0; }
+  .pagination-wrap i {
+    font-size: 2.5rem;
+    font-weight: 500;
+    color: #cf4338;
+    vertical-align: middle; }
+  .pagination-wrap span {
+    font-size: 1.125rem;
+    font-weight: bold;
+    letter-spacing: 7.2px;
+    color: #8d9091; }
