--- a/src/components/successStories/success-story.scss
+++ b/src/components/successStories/success-story.scss
@@ -77,16 +77,22 @@
 .pagination-wrap {
   padding: 2.5rem 0;
   i {
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: 500;
     color: #cf4338;
     vertical-align: middle;
+    @include media-breakpoint-up(lg) {
+      font-size: 2.5rem;
+    }
   }
 
   span {
-    font-size: 1.125rem;
+    font-size: 1rem;
     font-weight: bold;
     letter-spacing: 7.2px;
     color: #8d9091;
+    @include media-breakpoint-up(lg) {
+      font-size: 1.125rem;
+    }
   }
 }
