--- a/src/assets/stylesheets/_header.scss
+++ b/src/assets/stylesheets/_header.scss
@@ -132,9 +132,6 @@
   height: 4rem;
   box-shadow: 0px 3px 6px rgba($black, 0.161);
 
-  .navbar-toggler-icon {
-    background-image: url("../images/revampImages/navbar-collapse-icon.png");
-  }
   .social-media-link-wrap {
     margin: 0 -0.75rem;
     order: 1;
@@ -258,6 +255,12 @@
     order: 2;
     @include media-breakpoint-up(lg) {
       order: unset;
+    }
+
+    &.toggler-header {
+      > i {
+        color: #e86055;
+      }
     }
   }
 }
